-Progressing with some changes and minor fixes

--- a/src/views/pages/iglogin.ejs
+++ b/src/views/pages/iglogin.ejs
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
   <div class="col-md-5 text-center">
-    <img id="phones" class="img-fluid" src="assets/images/phones.png" alt="phones">
+    <img id="instagram" class="img-fluid" src="images/phones.png" alt="Instagram">
   </div>
 
   <div class="col-md-5 text-center align-self-center">
@@ -8,13 +8,13 @@
     <div class="whiteBox">
 
       <a href="/">
-        <img class="img-fluid mx-auto d-block" src="/assets/images/logo.png" alt="instagram logo">
+        <img class="img-fluid mx-auto d-block" src="images/logo.png" alt="instagram logo">
       </a>
 
       <br>
 
       <p>
-        Log in to see photos and videos from your friends.
+        Log in to use you'r own credentials to surf and analyse Instagram.
       </p>
 
       <a class="btn btn-primary col-10" href="<%=  %>" target="_blank">Login with Instagram</a>
@@ -43,8 +43,6 @@
     <p>
       Get the app.
     </p>
-    <img src="assets/images/app-store.png">
-    <img src="assets/images/google-play.png">
 
   </div>
 
