--- a/src/views/layouts/layout-header.ejs
+++ b/src/views/layouts/layout-header.ejs
@@ -3,4 +3,4 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <title>Houman Hadian's Doctoral Project @ualg</title>
 <link rel="stylesheet" href="/css/style.css">
-<%- include layout-stylesheets.ejs %>
+<%- include ../layouts/layout-stylesheets.ejs %>
