--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -43,6 +43,6 @@
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav('sidepanel-login')">&times;</a>
   <%- include iglogin.ejs %>
 </div>
-<%- include ../layout-footer.ejs %>
+<%- include ../layouts/layout-footer.ejs %>
 </body>
 </html>
