--- a/src/views/layouts/layout-stylesheets.ejs
+++ b/src/views/layouts/layout-stylesheets.ejs
@@ -1,3 +1,4 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link src="http://cdn.leafletjs.com/leaflet/v1.0.3/leaflet.css">
+<link rel="stylesheet" href="/css/bootstrap.min.css">
+<!--<link src="http://cdn.leafletjs.com/leaflet/v1.0.3/leaflet.css">-->
 <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
+<link rel="stylesheet" href="/css/style.css">
