--- a/public/css/style.css
+++ b/public/css/style.css
@@ -508,3 +508,10 @@ img {
     display : none
   }
 }
+.stack-span img{
+    max-width:100px;
+    max-height:100px;
+}
+.modal-backdrop{
+    z-index: 0;
+}
