--- a/src/views/layouts/layout-footer.ejs
+++ b/src/views/layouts/layout-footer.ejs
@@ -1,6 +1,7 @@
 <script type="text/javascript" src="/js/jquery.min.js"></script>
 <script type="text/javascript" src="/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/core.min.js"></script>
+<script type="text/javascript" src="/js/bootstrap-notify.min.js"></script>
 <script src="/js/feathers.js"></script>
 <script src="/js/socket.io.js"></script>
 <script src="/js/client.js"></script>
