--- a/src/views/layouts/layout-header.ejs
+++ b/src/views/layouts/layout-header.ejs
@@ -1,8 +1,7 @@
 <meta charset="UTF-8">
-<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<link rel="manifest" href="manifest.json" />
 
 <title>Houman Hadian's Doctoral Project @ualg</title>
 <%- include ../layouts/layout-stylesheets.ejs %>
