--- a/src/views/pages/posts.ejs
+++ b/src/views/pages/posts.ejs
@@ -13,9 +13,9 @@
         </div>
 
         <div class="card-body">
-          <a href="/edges/<%= edge.id %>">
+          <div style="cursor:pointer" onClick=getEndpoint("http://localhost:8080/instagram/post?","post-json",<%= '"'+edge.shortcode+'"' %>)>
             <img class="img-fluid" src="<%= edge.thumbnail_src %>" alt="<%= edge.edge_media_to_caption? edge.edge_media_to_caption.edges[0]:[] %>">
-          </a>
+          </div>
           <div class="likes-comments">
               <span style="color: rgb(249,5,5);">
                 <%if(edge.edge_media_preview_like){%>
@@ -32,20 +32,20 @@
           <% if (edge.owner){%>
             <% if(edge.owner.id==userid) { %>
 
-            <div class="row">
+           <!-- <div class="row">
 
-              <div class="col-6 align-self-center">
+              &lt;!&ndash;<div class="col-6 align-self-center">
                 <a href="/edges/<%= edge.id %>/edit" class="btn btn-primary">Edit</a>
-              </div>
+              </div>&ndash;&gt;
 
-              <div class="col-6 align-self-center">
+             &lt;!&ndash; <div class="col-6 align-self-center">
                 <form method="POST" action="/edges/<%= edge.id %>">
                   <input type="hidden" name="_method" value="DELETE">
                   <button class="btn btn-danger">Delete</button>
                 </form>
-              </div>
+              </div>&ndash;&gt;
 
-            </div>
+            </div>-->
 
           <% } %>
           <%}%>
