--- a/src/views/pages/comments.ejs
+++ b/src/views/pages/comments.ejs
@@ -4,22 +4,23 @@
   <% var commentDate = new Date(parseInt(edge.created_at)*1000) %>
   <% edge.created_at = commentDate.getFullYear()+'-'+commentDate.getMonth()+'-'+commentDate.getDay() %>
   <div class="row whiteBox ">
+      <div style="cursor:pointer" class="col-sm-6 text-center align-self-center" onClick=getEndpoint("http://localhost:8080/instagram/profile?","profile",<%= '"'+edge.username+'"' %>,"profile") >
+          <% if(!(typeof edge == 'undefined')){%>
+              <% if(edge.owner.profile_pic_url) { %>
+                  <img class="img-thumbnail" src="<%= !(typeof edge == 'undefined') ? edge.owner.profile_pic_url:"" %>" alt="<%= edge ? edge.username :"" %>">
+              <% } else { %>
+                  <img class="img-thumbnail" src="<%= !(typeof edge == 'undefined') ? edge.owner.profile_pic_url : "" %>" alt="<%= edge ? edge.username : "" %>">
+              <% } %>
+          <%}%>
+      </div>
 
     <div class="col-sm-6 text-center align-self-center">
-      <% if(!(typeof edge == 'undefined')){%>
-        <% if(edge.owner.profile_pic_url) { %>
-          <img class="img-thumbnail" src="<%= !(typeof edge == 'undefined') ? edge.owner.profile_pic_url:"" %>" alt="<%= edge ? edge.owner.username :"" %>">
-        <% } %>
-      <%}%>
-    </div>
 
-    <div class="col-sm-6 text-center align-self-center">
-
-      <h2><%= !(typeof edge == 'undefined') ? edge.owner.username : "username" %></h2>
-      <h3><%= !(typeof edge == 'undefined') ? edge.owner.full_name :"-"%></h3>
-      <h3><%= !(typeof edge == 'undefined') ? edge.created_at : "0000/00/00" %></h3>
+      <h3><%= !(typeof edge == 'undefined') ? edge.owner.username : "username" %></h3>
+      <h4><%= !(typeof edge == 'undefined') ? edge.owner.full_name :"-"%></h4>
+      <h4><%= !(typeof edge == 'undefined') ? edge.created_at : "0000/00/00" %></h4>
       </br>
-      <h4><%= !(typeof edge == 'undefined') ? edge.text : ":..." %></h4>
+      <h5><%= !(typeof edge == 'undefined') ? edge.text : ":..." %></h5>
     </div>
 
   </div>
