--- a/src/views/pages/main.ejs
+++ b/src/views/pages/main.ejs
@@ -79,86 +79,86 @@
     <div class="center-text" id="links-container">
       <ul class="endpoints">
         <li>
-          <input class="btn btn-primary" type="button"  value="Get user profile" onClick=getEndpoint("http://localhost:8080/instagram/profile?",'profile')>
+          <input class="btn btn-primary" type="button"  value="Get user profile" onClick=getEndpoint("http://localhost:8080/instagram/profile?",'profile','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/profile?houmanproject">Get user profile</a>-->
           <!--<a  href="http://localhost:8080/instagram/profile?houmanproject">Get user profile</a>-->
           <!--<a  onclick="getData('http://localhost:8080/instagram/profile?')">Get user profile</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get current  user profile" onClick=getEndpoint("http://localhost:8080/instagram/whoami",'whoami')>
+          <input class="btn btn-primary" type="button"  value="Get current  user profile" onClick=getEndpoint("http://localhost:8080/instagram/whoami",'whoami','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/whoami">Get logged in user</a>-->
           <!-- <a  href="http://localhost:8080/instagram/whoami">Get logged in user</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get user recent posts" onClick=getEndpoint("http://localhost:8080/instagram/posts?",'recent-posts')>
+          <input class="btn btn-primary" type="button"  value="Get user recent posts" onClick=getEndpoint("http://localhost:8080/instagram/posts?",'recent-posts','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/posts?username=adidas">Get user recent posts</a>-->
           <!--<a  href="http://localhost:8080/instagram/posts?username=adidas">Get user recent posts</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get user all posts" onClick=getEndpoint("http://localhost:8080/instagram/allposts?",'all-posts')>
+          <input class="btn btn-primary" type="button"  value="Get user all posts" onClick=getEndpoint("http://localhost:8080/instagram/allposts?",'all-posts','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/allposts?username=adidas">Get user all posts</a>-->
           <!--<a  href="http://localhost:8080/instagram/allposts?username=adidas">Get user all posts</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Explore by tag" onClick=getEndpoint("http://localhost:8080/instagram/explore/tag?",'tag-posts')>
+          <input class="btn btn-primary" type="button"  value="Explore by tag" onClick=getEndpoint("http://localhost:8080/instagram/explore/tag?",'tag-posts','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/explore/tag?tag=houman&count=50">Explore by tag</a>-->
           <!--<a  href="http://localhost:8080/instagram/explore/tag?tag=houman&count=50">Explore by tag</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Explore by location" onClick=getEndpoint("http://localhost:8080/instagram/explore/location?",'location-posts')>
+          <input class="btn btn-primary" type="button"  value="Explore by location" onClick=getEndpoint("http://localhost:8080/instagram/explore/location?",'location-posts','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/explore/location?location=tehran&count=50">Explore by location</a>-->
           <!--<a  href="http://localhost:8080/instagram/explore/location?location=tehran&count=50">Explore by location</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get user's followings" onClick=getEndpoint("http://localhost:8080/instagram/following?",'user-following')>
+          <input class="btn btn-primary" type="button"  value="Get user's followings" onClick=getEndpoint("http://localhost:8080/instagram/following?",'user-following','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/following?username=adidas&count=50">Get user's followings</a>-->
           <!-- <a  href="http://localhost:8080/instagram/following?username=adidas&count=50">Get user's followings</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get user followers" onClick=getEndpoint("http://localhost:8080/instagram/followers?",'user-followers')>
+          <input class="btn btn-primary" type="button"  value="Get user followers" onClick=getEndpoint("http://localhost:8080/instagram/followers?",'user-followers','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/followers?username=adidas&count=120">Get user followers</a>-->
           <!--<a  href="http://localhost:8080/instagram/followers?username=adidas&count=120">Get user followers</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Search Instagram" onClick=getEndpoint("http://localhost:8080/instagram/search?",'search-posts')>
+          <input class="btn btn-primary" type="button"  value="Search Instagram" onClick=getEndpoint("http://localhost:8080/instagram/search?",'search-posts','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/search?query=instagram">Search Instagram</a>-->
           <!--<a  href="http://localhost:8080/instagram/search?query=instagram">Search Instagram</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get feed" onClick=getEndpoint("http://localhost:8080/instagram/feed?",'feed-posts')>
+          <input class="btn btn-primary" type="button"  value="Get feed" onClick=getEndpoint("http://localhost:8080/instagram/feed?",'feed-posts','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/feed?count=15">Get feed</a>-->
           <!--<a  href="http://localhost:8080/instagram/feed?count=15">Get feed</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get all feed" onClick=getEndpoint("http://localhost:8080/instagram/allfeed?",'all-feed-posts')>
+          <input class="btn btn-primary" type="button"  value="Get all feed" onClick=getEndpoint("http://localhost:8080/instagram/allfeed?",'all-feed-posts','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/feed?count=15">Get feed</a>-->
           <!--<a  href="http://localhost:8080/instagram/feed?count=15">Get feed</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get post likes" onClick=getEndpoint("http://localhost:8080/instagram/likes?",'post-likes')>
+          <input class="btn btn-primary" type="button"  value="Get post likes" onClick=getEndpoint("http://localhost:8080/instagram/likes?",'post-likes','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/likes?shortcode=Bu1FtB-gxhE&count=65">Get post likes</a>-->
           <!--<a  href="http://localhost:8080/instagram/likes?shortcode=Bu1FtB-gxhE&count=65">Get post likes</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get post comments" onClick=getEndpoint("http://localhost:8080/instagram/comments?",'post-comments')>
+          <input class="btn btn-primary" type="button"  value="Get post comments" onClick=getEndpoint("http://localhost:8080/instagram/comments?",'post-comments','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/comments?shortcode=Bu6dTjrFnI-&count=165">Get post comments</a>-->
           <!--<a  href="http://localhost:8080/instagram/comments?shortcode=Bu6dTjrFnI-&count=165">Get post comments</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get post media" onClick=getEndpoint("http://localhost:8080/instagram/post?",'post-json')>
+          <input class="btn btn-primary" type="button"  value="Get post media" onClick=getEndpoint("http://localhost:8080/instagram/post?",'post-json','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/post?shortcode=Bu6dTjrFnI-">Get post</a>-->
           <!--<a  href="http://localhost:8080/instagram/post?shortcode=Bu6dTjrFnI-">Get post media</a>-->
           <br/>
@@ -170,13 +170,13 @@
           <br/>
         </li>-->
         <li>
-          <input class="btn btn-primary" type="button"  value="Get suggested posts" onClick=getEndpoint("http://localhost:8080/instagram/suggested/posts?",'sugg-posts')>
+          <input class="btn btn-primary" type="button"  value="Get suggested posts" onClick=getEndpoint("http://localhost:8080/instagram/suggested/posts?",'sugg-posts','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/suggested/posts?count=20">Get suggested posts</a>-->
           <!--<a  href="http://localhost:8080/instagram/suggested/posts?count=20">Get suggested posts</a>-->
           <br/>
         </li>
         <li>
-          <input class="btn btn-primary" type="button"  value="Get suggested people" onClick=getEndpoint("http://localhost:8080/instagram/suggested/people?",'sugg-people')>
+          <input class="btn btn-primary" type="button"  value="Get suggested people" onClick=getEndpoint("http://localhost:8080/instagram/suggested/people?",'sugg-people','','main')>
           <!--<a  href="http://localhost:3003/api/instagram/suggested/people?count=20">Get suggested people</a>-->
           <!--<a  href="http://localhost:8080/instagram/suggested/people?count=20">Get suggested people</a>-->
           <br/>
