--- a/src/views/pages/likes.ejs
+++ b/src/views/pages/likes.ejs
@@ -1,6 +1,6 @@
 <% if(!(typeof etlData.edges == 'undefined')){ console.log('we got data here...')%>
   <% etlData.edges.forEach((edge) => { %>
-  <% edge = edge.node %>
+  <% if(edge.node)edge = edge.node %>
   <div class="row whiteBox ">
 
     <div style="cursor:pointer" class="col-sm-6 text-center align-self-center" onClick=getEndpoint("http://localhost:8080/instagram/profile?","profile",<%= '"'+edge.username+'"' %>,"profile") >
