--- a/src/views/pages/comments.ejs
+++ b/src/views/pages/comments.ejs
@@ -4,12 +4,12 @@
   <% var commentDate = new Date(parseInt(edge.created_at)*1000) %>
   <% edge.created_at = commentDate.getFullYear()+'-'+commentDate.getMonth()+'-'+commentDate.getDay() %>
   <div class="row whiteBox ">
-      <div style="cursor:pointer" class="col-sm-6 text-center align-self-center" onClick=getEndpoint("http://localhost:8080/instagram/profile?","profile",<%= '"'+edge.username+'"' %>,"profile") >
+      <div style="cursor:pointer" class="col-sm-6 text-center align-self-center" onClick=getEndpoint("http://localhost:8080/instagram/profile?","profile",<%= '"'+edge.owner.username+'"' %>,"profile") >
           <% if(!(typeof edge == 'undefined')){%>
               <% if(edge.owner.profile_pic_url) { %>
-                  <img class="img-thumbnail" src="<%= !(typeof edge == 'undefined') ? edge.owner.profile_pic_url:"" %>" alt="<%= edge ? edge.username :"" %>">
+                  <img class="img-thumbnail" src="<%= !(typeof edge == 'undefined') ? edge.owner.profile_pic_url:"" %>" alt="<%= edge ? edge.owner.username :"" %>">
               <% } else { %>
-                  <img class="img-thumbnail" src="<%= !(typeof edge == 'undefined') ? edge.owner.profile_pic_url : "" %>" alt="<%= edge ? edge.username : "" %>">
+                  <img class="img-thumbnail" src="<%= !(typeof edge == 'undefined') ? edge.owner.profile_pic_url : "" %>" alt="<%= edge ? edge.owner.username : "" %>">
               <% } %>
           <%}%>
       </div>
