- Fixed some hits counter minor issues - Added bootstrap pulse to hit counter badges on buttons - Moved javascript references to a separated ejs file named layouts-javascripts.ejs, referenced by layout-footer.ejs - Fixed typos in mw-etl-api.js in comments - Implemented NO POST | NO COMMENT | NO LIKES | NO FOLLOWERS | NO FOLLOINGS ... error content with related css styles

--- a/src/views/layouts/layout-stylesheets.ejs
+++ b/src/views/layouts/layout-stylesheets.ejs
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/pulse.css">
 <link rel="stylesheet" href="/css/bootstrap-glyphicons.css">
 <!--<link src="http://cdn.leafletjs.com/leaflet/v1.0.3/leaflet.css">-->
 <link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
