--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -28,7 +28,7 @@
           </fieldset>
 
           <!--<fieldset>
-            <input class="block" type="password" name="password" placeholder="password">
+            <input class="block form-control" type="password" name="password" placeholder="password">
           </fieldset>-->
 
           <button type="submit" id="login" class="button button-primary block signup">
