--- a/src/views/layouts/layout-footer.ejs
+++ b/src/views/layouts/layout-footer.ejs
@@ -1,11 +1,4 @@
-<script type="text/javascript" src="/js/jquery.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/js/core.min.js"></script>
-<script type="text/javascript" src="/js/bootstrap-notify.min.js"></script>
-<script type="text/javascript" src="/js/dayjs.min.js"></script>
-<script src="/js/feathers.js"></script>
-<script src="/js/socket.io.js"></script>
-<script src="/js/client.js"></script>
+<% include layouts-javascripts.ejs%>
 <!--<script src="http://cdn.leafletjs.com/leaflet/v1.0.3/leaflet.js"></script>-->
 <div id="footer-container">
   <p class="center-text">For more information on this project see <a href="https://houmanhadian.github.io" title="Houman Hadian's doctoral project @ UAlg" target="blank">houmanhadian.github.io</a>.</p>
